--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,8 @@
         <param-name>login</param-name>
         <param-value>br.com.ifsales.servlets.helpers.LoginUserHelper</param-value>
     </context-param>
+    <context-param>
+        <param-name>logout</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.LogoutUserHelper</param-value>
+    </context-param>
 </web-app>
