fix: renaming ControllerServlet url and refering to action not jsp

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,8 @@
         <param-name>logout</param-name>
         <param-value>br.com.ifsales.servlets.helpers.LogoutUserHelper</param-value>
     </context-param>
+    <context-param>
+        <param-name>home</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.HomeHelper</param-value>
+    </context-param>
 </web-app>
