* Removing modules at validators * Cleaning code

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="6.0">
     <display-name>IFSales</display-name>
     <welcome-file-list>
-        <welcome-file>/pages/home.jsp</welcome-file>
+        <welcome-file>/pages/login.jsp</welcome-file>
     </welcome-file-list>
     <context-param>
         <param-name>createUser</param-name>
