--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <param-value>br.com.ifsales.servlets.helpers.LoginUserHelper</param-value>
     </context-param>
     <context-param>
+        <param-name>home</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.HomeHelper</param-value>
+    </context-param>
+    <context-param>
         <param-name>logout</param-name>
         <param-value>br.com.ifsales.servlets.helpers.LogoutUserHelper</param-value>
     </context-param>
