--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,19 +24,19 @@
         <param-value>br.com.ifsales.servlets.helpers.LogoutUserHelper</param-value>
     </context-param>
     <context-param>
-        <param-name>listSalesPersons</param-name>
-        <param-value>br.com.ifsales.servlets.helpers.ListSalesPersonsHelper</param-value>
+        <param-name>listSalespersons</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.ListSalespersonsHelper</param-value>
     </context-param>
     <context-param>
-        <param-name>saveSalesPerson</param-name>
-        <param-value>br.com.ifsales.servlets.helpers.SaveSalesPersonHelper</param-value>
+        <param-name>saveSalesperson</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.SaveSalespersonHelper</param-value>
     </context-param>
     <context-param>
-        <param-name>updateSalesPerson</param-name>
-        <param-value>br.com.ifsales.servlets.helpers.UpdateSalesPersonHelper</param-value>
+        <param-name>updateSalesperson</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.UpdateSalespersonHelper</param-value>
     </context-param>
     <context-param>
-        <param-name>deleteSalesPerson</param-name>
-        <param-value>br.com.ifsales.servlets.helpers.DeleteSalesPersonHelper</param-value>
+        <param-name>deleteSalesperson</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.DeleteSalespersonHelper</param-value>
     </context-param>
 </web-app>
