--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
             <version>3.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.31</version>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>23.6.0.24.10</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
