feat(product): added CRUD to product

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,4 +55,25 @@
         <param-name>deleteRegion</param-name>
         <param-value>br.com.ifsales.servlets.helpers.DeleteRegionHelper</param-value>
     </context-param>
+
+    <context-param>
+        <param-name>loadProductForm</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.LoadProductFormHelper</param-value>
+    </context-param>
+    <context-param>
+        <param-name>listProducts</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.ListProductsHelper</param-value>
+    </context-param>
+    <context-param>
+        <param-name>saveProduct</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.SaveProductHelper</param-value>
+    </context-param>
+    <context-param>
+        <param-name>updateProduct</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.UpdateProductHelper</param-value>
+    </context-param>
+    <context-param>
+        <param-name>deleteProduct</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.DeleteProductHelper</param-value>
+    </context-param>
 </web-app>
