refactor: enhance store management with improved feedback and centralized loading logic

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -131,4 +131,8 @@
         <param-name>deleteCustomer</param-name>
         <param-value>br.com.ifsales.servlets.helpers.customer.DeleteCustomerHelper</param-value>
     </context-param>
+    <context-param>
+        <param-name>loadStoreForm</param-name>
+        <param-value>br.com.ifsales.servlets.helpers.store.LoadStoreFormHelper</param-value>
+    </context-param>
 </web-app>
