feat(dashboard): added Dashboard helper and page

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
     </context-param>
     <context-param>
         <param-name>dashboard</param-name>
-        <param-value>br.com.ifsales.servlets.helpers.dashboard.DashboardHelper</param-value>
+        <param-value>br.com.ifsales.servlets.helpers.DashboardHelper</param-value>
     </context-param>
     <context-param>
         <param-name>home</param-name>
